# minichain

./: CMakeLists.txt  README.md
include/: block.h  blockHelper.h  chain.h  chainLoader.h  hash.h  mine_handler.h  minehandler.h  miner.h  network.h  transactionBuilder.h  transactionListener.h  util.h
proto/: block.proto  transaction.proto
src/: block.cpp  blockHelper.cpp  chain.cpp  chainLoader.cpp  hash.cpp  mine_handler.cpp  minehandler.cpp  miner.cpp  network.cpp  transactionBuilder.cpp  transactionListener.cpp
test/: test_mine_handler.cpp  test_minichain.cpp  test_sender.cpp  test_transaction.cpp  test_transaction_listener.cpp
